# scope-llm

./: .gitignore  README.md  pyproject.toml
blog/: analysis.md  live-avatar-in-5-minutes.md
examples/: talking-head.scope-workflow.json
src/scope_llm/: __init__.py  node.py  plugin.py
