[project]
name = "scope-llm"
version = "0.1.0"
description = "Generic local-LLM node for Daydream Scope — answers a question with a small local LLM and emits the result wrapped in a user-defined template."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "transformers>=4.44",
    "accelerate>=0.33",
    # peft 0.19+ requires torchao>=0.16, but Scope pins torchao==0.15.0.
    "peft<0.19",
]

[project.entry-points.scope]
llm = "scope_llm:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_llm"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
